--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "homepage": "https://github.com/nwilde97/daq-reader#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "gnuplot": "^0.3.1",
     "open": "^7.0.4",
     "socket.io": "^2.3.0"
   }
